Fix lazy icon on mobile

--- a/src/styles/base/!vendor.scss
+++ b/src/styles/base/!vendor.scss
@@ -147,6 +147,10 @@
             height: 100%;
             @include bg-filler('../../vectors/lazy.svg', 50px);
             opacity: .15;
+
+            @include mo(xs) {
+                background-size: 35px;
+            }
         }
     }
 
